# astronomy-olympiad-archive

./: .gitignore  AGENTS.md  LICENSE  PUBLISHING.md  README.md  README.ru.md  build_indices.py  cleanup_outputs.py  crawl_source.py  detect_relations.py  discover_sources.py  import_manual_files.py  normalize_archive.py  pyproject.toml  run_pipeline.py
data/indices/: coverage_report.md  files_index.csv  olympiads_index.csv  relation_groups.csv
data/manifests/: discovered_documents.jsonl  discovery_coverage.csv  source_candidates.csv
tests/: test_backfill_pipeline.py  test_cleanup_outputs.py
utils/: __init__.py  cli.py  fs_utils.py  html_utils.py  http_utils.py  logging_utils.py  metadata.py  models.py  source_configs.py
